--- a/portfolio.html
+++ b/portfolio.html
@@ -70,10 +70,10 @@
       <h2>Portfolios</h2>
       <div class="row">
         <div class="bx bx-1">
-          <div class="card"> <a href="sessaoemestudio.html"><img class="card-img" src="assets/img/IMG_0303.JPG" alt=""></a>
-            <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+          <div class="card"> <img class="card-img" src="assets/img/IMG_0303.JPG" alt="">
+            <div class="card-img-overlay"> <a href="sessaoemestudio.html"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
-                <h5 class="card-title">Sessão fotográfica em estúdio<br>Clica para ver mais</h5>
+                <h5 class="card-title">Sessão fotográfica em estúdio<br>Clica no coração acima para ver mais</h5>
               </div>
             </div>
           </div>
