--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   
   <footer class="container-fluid p-0 pr-0">
     <div class="copy pt-4 pb-4">
-      <p><a href="https://freehtml5.co/" target="_blank"> &copy; 2021 RQZ</a>  &nbsp;  |  &nbsp; Design by <a href="https://freehtml5.co/" target="_blank">Riqueza CM</a> &nbsp; | &nbsp;  All rights reserved</p>
+	    <p><a href="https://www.instagram.com/riquezacm/" target="_blank"> &copy; 2022 RQZ</a>  &nbsp;  |  &nbsp; Design by <a href="https://www.instagram.com/riqueza_ao/" target="_blank">Riqueza AO</a> &nbsp; | &nbsp;  Todos direitos reservados</p>
     </div>
 	
 		    
