--- a/blog.html
+++ b/blog.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+	 <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-09163ac8-2b7c-45d1-b962-fdc6be8a4ac2"></div>
+	
 	<!-- Messenger Plug-in de chat Code -->
     <div id="fb-root"></div>
 
@@ -155,7 +158,7 @@
       
     </div>
     <div class="copy pt-4 pb-4">
-      <p><a href="https://freehtml5.co/" target="_blank"> &copy; 2019 Girly</a>  &nbsp;  |  &nbsp; Design by <a href="https://freehtml5.co/" target="_blank">freehtml5.co</a> &nbsp; | &nbsp;  All rights reserved</p>
+      <p><a href="https://www.instagram.com/riquezacm/" target="_blank"> &copy; 2022 RQZ</a>  &nbsp;  |  &nbsp; Design by <a href="https://www.instagram.com/riqueza_ao/" target="_blank">Riqueza AO</a> &nbsp; | &nbsp;  Todos direitos reservados</p>
     </div>
   </footer>
 
