--- a/sobrenos.html
+++ b/sobrenos.html
@@ -119,6 +119,65 @@ Aguardamos o seu contacto!</p>
           </div>
         </div>
       </div>
+      <div class="container recent" id="activity">
+        <div class="row">
+          <h2>Trabalhos recentes</h2>
+          <div class="owl-carousel owl-carousel2 owl-theme">
+            <div>
+              <div class="card"> <img class="card-img" src="assets/img/modelo1.jpg" alt="">
+                <div class="card-img-overlay"> <a href="https://www.instagram.com/p/CFPrDvgnHQg/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+                  <div class="bottom-text">
+                    <h5 class="card-title">@Amélia de sousa</h5>
+                    <p class="card-text">Dreamer Photography</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="card"> <img class="card-img" src="assets/img/IMG_123.jpg" alt="">
+                <div class="card-img-overlay"> <a href="" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+                  <div class="bottom-text">
+                    <h5 class="card-title">@Hernane e Jany</h5>
+                    <p class="card-text"> Dreamer Photography</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="card"> <img class="card-img" src="assets/img/IMG_0300.JPG" alt="">
+                <div class="card-img-overlay"> <a href="" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+                  <div class="bottom-text">
+                    <h5 class="card-title">@Shalom Muginga</h5>
+                    <p class="card-text">Dreamer Photography </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="card"> <img class="card-img" src="assets/img/modelo5.jpg" alt="">
+                <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+                  <div class="bottom-text">
+                    <h5 class="card-title">@Domingas Eduardo Ngunza</h5>
+                    <p class="card-text">Dreamer Photographys</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="card"> <img class="card-img" src="assets/img/IMG_0942.jpg" alt="">
+                <div class="card-img-overlay"> <a href="" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+                  <div class="bottom-text">
+                    <h5 class="card-title">@Josefania dos Santos</h5>
+                    <p class="card-text">Dreamer Photography </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   
   
    <footer class="container-fluid p-0 pr-0">
