--- a/testemunhos.html
+++ b/testemunhos.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>DreamerPhotography</title>
+  <title>Testemunhos</title>
 </head>
 
 <body>
@@ -62,7 +62,7 @@
           <li class="nav-item"> <a class="nav-link" href="portfolio.html" tabindex="-1" aria-disabled="true">Portfólio</a></li>
           <li class="nav-item active"> <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
           <li class="nav-item"> <a class="nav-link" href="blog.html" tabindex="-1" aria-disabled="true">Blog</a></li>
-          <li class="nav-item"> <a class="nav-link" href="contato.html" tabindex="-1" aria-disabled="true">Contato</a></li>
+          <li class="nav-item"> <a class="nav-link" href="contato.html" tabindex="-1" aria-disabled="true">Contacto</a></li>
         </ul>
       </div>
     </div>
