--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,7 @@
           <li class="nav-item"> <a class="nav-link" href="portfolio.html" tabindex="-1" aria-disabled="true">Portfolio</a></li>
           <li class="nav-item"> <a class="nav-link" href="testemunhos.html" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
           <li class="nav-item active"> <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Blog</a></li>
-          <li class="nav-item"> <a class="nav-link" href="index.html#contact" tabindex="-1" aria-disabled="true">Contato</a></li>
+          <li class="nav-item"> <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contato</a></li>
         </ul>
       </div>
     </div>
