--- a/atividades.html
+++ b/atividades.html
@@ -57,11 +57,11 @@
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"> <a class="nav-link" href="index.html">Início</a> </li>
           <li class="nav-item"> <a class="nav-link" href="sobrenos.html" tabindex="-1" aria-disabled="true">Sobre nós</a></li>
-          <li class="nav-item active"> <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Atividades</a></li>
+          <li class="nav-item active"> <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Actividades</a></li>
           <li class="nav-item"> <a class="nav-link" href="portfolio.html" tabindex="-1" aria-disabled="true">Portfólio</a></li>
           <li class="nav-item"> <a class="nav-link" href="testemunhos.html" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
           <li class="nav-item"> <a class="nav-link" href="blog.html" tabindex="-1" aria-disabled="true">Blog</a></li>
-          <li class="nav-item"> <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contacto</a></li>
+          <li class="nav-item"> <a class="nav-link" href="contato.html" tabindex="-1" aria-disabled="true">Contacto</a></li>
         </ul>
       </div>
     </div>
