--- a/sobrenos.html
+++ b/sobrenos.html
@@ -99,18 +99,18 @@
             <hr />
             <p>Saudações, prezado(a)! <br>
 
-A Dreamer Photography é uma empresa de direito angolano.<br>
-Está constituída por um grupo de 5 jovens sonhadores.<br>
-Decidimos seguir a nossa paixão pela fotografia e aliamos<br> 
-à profissão e aqui estamos! Somos especialistas na arte<br> 
-de captar felicidade e eternizar o momento. Conte connosco<br> 
-para cada etapa da sua vida. A nossa lente guardará os melhores<br> 
-momentos do seu noivado, do casamento, da gravidez, dos primeiros<br> 
-dias dos seus filhos e da sua família e muito mais. Fotografar é<br> 
-guardar em clicks os momentos, que ficarão para sempre na memória,<br> 
-mas o que também poderão se partilhar aos olhos dos mais pequenos,<br> 
-da família e de todos os que não estiveram presentes.<br> 
-Estamos disponíveis para trabalhos empresariais, nomeadamente,<br>
+A Dreamer Photography é uma empresa de direito angolano.
+Está constituída por um grupo de 5 jovens sonhadores.
+Decidimos seguir a nossa paixão pela fotografia e aliamos
+à profissão e aqui estamos! Somos especialistas na arte
+de captar felicidade e eternizar o momento. Conte connosco
+para cada etapa da sua vida. A nossa lente guardará os melhores
+momentos do seu noivado, do casamento, da gravidez, dos primeiros 
+dias dos seus filhos e da sua família e muito mais. Fotografar é 
+guardar em clicks os momentos, que ficarão para sempre na memória, 
+mas o que também poderão se partilhar aos olhos dos mais pequenos, 
+da família e de todos os que não estiveram presentes.
+Estamos disponíveis para trabalhos empresariais, nomeadamente,
 na área publicitária e eventos musicais.
 
 
