--- a/sobrenos.html
+++ b/sobrenos.html
@@ -134,10 +134,10 @@ Aguardamos o seu contacto!</p>
               </div>
             </div>
             <div>
-              <div class="card"> <img class="card-img" src="assets/img/IMG_123.jpg" alt="">
+              <div class="card"> <img class="card-img" src="#" alt="">
                 <div class="card-img-overlay"> <a href="" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
-                    <h5 class="card-title">@Hernane e Jany</h5>
+                    <h5 class="card-title">#</h5>
                     <p class="card-text"> Dreamer Photography</p>
                   </div>
                 </div>
@@ -154,10 +154,10 @@ Aguardamos o seu contacto!</p>
               </div>
             </div>
             <div>
-              <div class="card"> <img class="card-img" src="assets/img/modelo5.jpg" alt="">
+              <div class="card"> <img class="card-img" src="#" alt="">
                 <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
-                    <h5 class="card-title">@Domingas Eduardo Ngunza</h5>
+                    <h5 class="card-title">#</h5>
                     <p class="card-text">Dreamer Photographys</p>
                   </div>
                 </div>
