--- a/sobrenos.html
+++ b/sobrenos.html
@@ -125,7 +125,7 @@ Aguardamos o seu contacto!</p>
           <div class="owl-carousel owl-carousel2 owl-theme">
             <div>
               <div class="card"> <img class="card-img" src="assets/img/modelo1.jpg" alt="">
-                <div class="card-img-overlay"> <a href="https://www.instagram.com/p/CFPrDvgnHQg/"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+                <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
                     <h5 class="card-title">@Amélia de sousa</h5>
                     <p class="card-text">Dreamer Photography</p>
@@ -134,40 +134,40 @@ Aguardamos o seu contacto!</p>
               </div>
             </div>
             <div>
-              <div class="card"> <img class="card-img" src="#" alt="">
-                <div class="card-img-overlay"> <a href="" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+              <div class="card"> <img class="card-img" src="assets/img/DSC_0656.JPG" alt="">
+                <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
-                    <h5 class="card-title">#</h5>
+                    <h5 class="card-title">Sessão da Titãs</h5>
                     <p class="card-text"> Dreamer Photography</p>
                   </div>
                 </div>
               </div>
             </div>
-            <div>
-              <div class="card"> <img class="card-img" src="assets/img/IMG_0300.JPG" alt="">
-                <div class="card-img-overlay"> <a href="" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+            <di
+              <div class="card"> <img class="card-img" src="assets/img/DSC_0755.JPG" alt="">
+                <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
-                    <h5 class="card-title">@Shalom Muginga</h5>
+                    <h5 class="card-title">Sessão da Titãs</h5>
                     <p class="card-text">Dreamer Photography </p>
                   </div>
                 </div>
               </div>
             </div>
             <div>
-              <div class="card"> <img class="card-img" src="#" alt="">
-                <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+              <div class="card"> <img class="card-img" src="assets/img/DSC_0757.JPG" alt="">
+                <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
-                    <h5 class="card-title">#</h5>
+                    <h5 class="card-title">Sessão da Titãs</h5>
                     <p class="card-text">Dreamer Photographys</p>
                   </div>
                 </div>
               </div>
             </div>
             <div>
-              <div class="card"> <img class="card-img" src="assets/img/IMG_0942.jpg" alt="">
-                <div class="card-img-overlay"> <a href="" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+              <div class="card"> <img class="card-img" src="assets/img/TITAS.JPG" alt="">
+                <div class="card-img-overlay"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
-                    <h5 class="card-title">@Josefania dos Santos</h5>
+                    <h5 class="card-title">Sessão da Titãs</h5>
                     <p class="card-text">Dreamer Photography </p>
                   </div>
                 </div>
