--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
           <div class="card"> <img class="card-img" src="assets/img/IMG_0303.JPG" alt="">
             <div class="card-img-overlay"> <a href="sessaoemestudio.html"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
-                <h5 class="card-title">Sessão fotográfica ao ar livre<br>Clica no coração acima para ver mais</h5>
+                <h5 class="card-title">Fotografia ao ar livre<br>Clica no coração acima para ver mais</h5>
               </div>
             </div>
           </div>
@@ -84,7 +84,7 @@
           <div class="card"> <img class="card-img" src="assets/img/portfolio-img2.png" alt="">
             <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
-                <h5 class="card-title">Fotografia especial de férias</h5>
+                <h5 class="card-title">Fotográfia no estúdio<br>Clica no coração acima para ver mais</h5>
               </div>
             </div>
           </div>
@@ -93,7 +93,7 @@
           <div class="card"> <img class="card-img" src="assets/img/portfolio-img3.png" alt="">
             <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
-                <h5 class="card-title">Fotografia de produto</h5>
+                <h5 class="card-title">Fotografia de Gestante<br>Clica no coração acima para ver mais</h5>
               </div>
             </div>
           </div>
@@ -102,22 +102,13 @@
           <div class="card"> <img class="card-img" src="assets/img/portfolio-img4.png" alt="">
             <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
-                <h5 class="card-title">Fotos de lugares históricos</h5>
+		      <h5 class="card-title"></h5>Fotografia de aniversário<br>Clica no coração acima para ver mais</h5>
               </div>
             </div>
           </div>
         </div>
-        <div class="bx bx-middle" style="padding: 0;">
-          <div class="bx bx-5">
-            <div class="card"> <img class="card-img" src="assets/img/portfolio-img5.png" alt="">
-              <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
-                <div class="bottom-text">
-                  <h5 class="card-title">Gestante</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="bx bx-6">
+	    
+         <div class="bx bx-6">
             <div class="card"> <img class="card-img" src="assets/img/portfolio-img6.png" alt="">
               <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                 <div class="bottom-text">
