--- a/sessaoemestudio.html
+++ b/sessaoemestudio.html
@@ -61,7 +61,7 @@
           <li class="nav-item"> <a class="nav-link" href="portfolio.html" tabindex="-1" aria-disabled="true">Portfolio</a></li>
           <li class="nav-item"> <a class="nav-link" href="testemunho.html" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
           <li class="nav-item"> <a class="nav-link" href="blog.html" tabindex="-1" aria-disabled="true">Blog</a></li>
-          <li class="nav-item"> <a class="nav-link" href="index.html#contact" tabindex="-1" aria-disabled="true">Contacto</a></li>
+          <li class="nav-item"> <a class="nav-link" href="index.html#contact" tabindex="-1" aria-disabled="true">Redes sociais</a></li>
         </ul>
       </div>
     </div>
