--- a/sobrenos.html
+++ b/sobrenos.html
@@ -62,7 +62,7 @@
           <li class="nav-item"> <a class="nav-link" href="portfolio.html" tabindex="-1" aria-disabled="true">Portfólio</a></li>
           <li class="nav-item"> <a class="nav-link" href="testemunhos.html" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
           <li class="nav-item"> <a class="nav-link" href="blog.html" tabindex="-1" aria-disabled="true">Blog</a></li>
-          <li class="nav-item"> <a class="nav-link" href="contato.html" tabindex="-1" aria-disabled="true">Contacto</a></li>
+          <li class="nav-item"> <a class="nav-link" href="contato.html" tabindex="-1" aria-disabled="true">Redes sociais</a></li>
         </ul>
       </div>
     </div>
