--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
           <div class="card"> <img class="card-img" src="assets/img/portfolio-img4.png" alt="">
             <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
-		      <h5 class="card-title"></h5>Fotografia de aniversário<br>Clica no coração acima para ver mais</h5>
+		      <h5 class="card-title">Fotografia de aniversário<br>Clica no coração acima para ver mais</h5>
               </div>
             </div>
           </div>
