--- a/blog.html
+++ b/blog.html
@@ -56,11 +56,11 @@
       <div id="my-nav" class="collapse navbar-collapse">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"> <a class="nav-link" href="index.html">Início</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="sobrenos.html" tabindex="-1" aria-disabled="true">Sobre nós</a></li>
+          <li class="nav-item"> <a class="nav-link" href="sobrenos.html" tabindex="-1" aria-disabled="true">Sobre a dreamer</a></li>
           <li class="nav-item"> <a class="nav-link" href="atividades.html" tabindex="-1" aria-disabled="true">Actividades</a></li>
           <li class="nav-item"> <a class="nav-link" href="portfolio.html" tabindex="-1" aria-disabled="true">Portfólio</a></li>
           <li class="nav-item"> <a class="nav-link" href="testemunhos.html" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
-          <li class="nav-item active"> <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Blog</a></li>
+          <li class="nav-item active"> <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Orçamento</a></li>
           <li class="nav-item"> <a class="nav-link" href="contato.html" tabindex="-1" aria-disabled="true">Redes sociais</a></li>
         </ul>
       </div>
