--- a/atividades.html
+++ b/atividades.html
@@ -70,14 +70,14 @@
   <div class="container-fluid fh5co-recent-work activity">
     <div class="container recent">
       <div class="row">
-        <h2>Ativade do mês</h2>
+        <h2></h2>
         <div class="owl-carousel owl-carousel3 owl-theme">
           <div>
             <div class="card"> <img class="card-img" src="assets/img/j&c1.JPG" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
-                  <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
-                  <a href="#">Ler mais <img src="assets/img/double-right.svg" alt=""></a> 
+                  <h5 class="card-title">Fotografia ao livre</h5>
+                  <a href="#">Ver mais <img src="assets/img/double-right.svg" alt=""></a> 
                 </div>
               </div>
             </div>
@@ -86,8 +86,8 @@
             <div class="card"> <img class="card-img" src="assets/img/j&c2.JPG"  alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
-                  <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
-                  <a href="#">Ler mais <img src="assets/img/double-right.svg" alt=""></a> 
+                  <h5 class="card-title">Fotografia no estúdio</h5>
+                  <a href="#">Ver mais <img src="assets/img/double-right.svg" alt=""></a> 
                 </div>
               </div>
             </div>
@@ -96,8 +96,8 @@
             <div class="card"> <img class="card-img" src="assets/img/lucrecia.JPG" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
-                  <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
-                  <a href="#">Ler mais <img src="assets/img/double-right.svg" alt=""></a> 
+                  <h5 class="card-title">Fotografia de Gestante</h5>
+                  <a href="#">Ver mais <img src="assets/img/double-right.svg" alt=""></a> 
                 </div>
               </div>
             </div>
@@ -106,8 +106,8 @@
             <div class="card"> <img class="card-img" src="assets/img/bruna1.JPG" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
-                  <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
-                  <a href="#">Ler mais <img src="assets/img/double-right.svg" alt=""></a> 
+                  <h5 class="card-title">Fotografia de aniversário</h5>
+                  <a href="#">Ver mais <img src="assets/img/double-right.svg" alt=""></a> 
                 </div>
               </div>
             </div>
@@ -116,8 +116,8 @@
             <div class="card"> <img class="card-img" src="assets/img/modelo5.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
-                  <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
-                  <a href="#">Ler mais <img src="assets/img/double-right.svg" alt=""></a> 
+                  <h5 class="card-title">Recém nascido</h5>
+                  <a href="#">Ver mais <img src="assets/img/double-right.svg" alt=""></a> 
                 </div>
               </div>
             </div>
@@ -126,73 +126,12 @@
             <div class="card"> <img class="card-img" src="assets/img/DSC_0164.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
-                  <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
-                  <a href="#">Ler mais <img src="assets/img/double-right.svg" alt=""></a> 
+                  <h5 class="card-title">Fotografia de casamento</h5>
+                  <a href="#">Ver mais <img src="assets/img/double-right.svg" alt=""></a> 
                 </div>
               </div>
             </div>
           </div>
-		   <div>
-            <div class="card"> <img class="card-img" src="assets/img/DSC_0150.jpg" alt="">
-              <div class="card-img-overlay">
-                <div class="bottom-text">
-                  <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
-                  <a href="#">Ler mais <img src="assets/img/double-right.svg" alt=""></a> 
-                </div>
-              </div>
-            </div>
-          </div>
-		   <div>
-            <div class="card"> <img class="card-img" src="assets/img/DSC_0151.jpg" alt="">
-              <div class="card-img-overlay">
-                <div class="bottom-text">
-                  <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
-                  <a href="#">Ler mais <img src="assets/img/double-right.svg" alt=""></a> 
-                </div>
-              </div>
-            </div>
-          </div>
-		   <div>
-            <div class="card"> <img class="card-img" src="assets/img/DSC_0153.jpg" alt="">
-              <div class="card-img-overlay">
-                <div class="bottom-text">
-                  <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
-                  <a href="#">Ler mais <img src="assets/img/double-right.svg" alt=""></a> 
-                </div>
-              </div>
-            </div>
-          </div>
-		   <div>
-            <div class="card"> <img class="card-img" src="assets/img/DSC_0173 2.jpg" alt="">
-              <div class="card-img-overlay">
-                <div class="bottom-text">
-                  <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
-                  <a href="#">Ler mais <img src="assets/img/double-right.svg" alt=""></a> 
-                </div>
-              </div>
-            </div>
-          </div>
-		   <div class="card"> <img class="card-img" src="assets/img/DSC_0204 2.jpg" alt="">
-              <div class="card-img-overlay">
-                <div class="bottom-text">
-                  <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
-                  <a href="#">Ler mais <img src="assets/img/double-right.svg" alt=""></a> 
-                </div>
-              </div>
-            </div>
-          </div> <div class="card"> <img class="card-img" src="assets/img/team.JPG" alt="">
-              <div class="card-img-overlay">
-                <div class="bottom-text">
-                  <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
-                  <a href="#">Ler mais <img src="assets/img/double-right.svg" alt=""></a> 
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   
   <footer class="container-fluid p-0 pr-0">
     <div class="row mr-0 ml-0">
